--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -36,9 +36,9 @@
 		<input hidden type="checkbox" id="ballot">
 		<nav class="menu">
 	<ul>
-		<li> <a href="https://jdh8.org/"> Home </a> </li>
-		<li> <a href="/about/"> About me </a> </li>
-		<li> <a href="/tools/"> Tools </a>
+		<li> <a href="https://sohipkim.github.io/"> Home </a> </li>
+		<li> <a href="../_site/about/about.html"> About me </a> </li>
+		<li> <a href="/Portfolio/"> Portfolio </a>
 		<ul>
 			<li> <a href="/tools/asm-js-minifier/"> Asm.js minifier </a> </li>	
 			<li> <a href="/tools/prime/"> Primality test </a> </li>
