--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -37,7 +37,7 @@
 		<nav class="menu">
 	<ul>
 		<li> <a href="https://sohipkim.github.io/"> Home </a> </li>
-		<li> <a href="../_site/about/about.html"> About me </a> </li>
+		<li> <a href="/about/"> About me </a> </li>
 		<li> <a href="/Portfolio/"> Portfolio </a>
 		<ul>
 			<li> <a href="/tools/asm-js-minifier/"> Asm.js minifier </a> </li>	
